# fooyin-album-mosaic-plugin

./: .gitignore  CMakeLists.txt  README.md  albummosaicplugin.cpp  albummosaicplugin.h  albummosaicsettingsdialog.cpp  albummosaicsettingsdialog.h  albummosaicwidget.cpp  albummosaicwidget.h  metadata.json
